--- a/_posts/cyr/2021-07-13-vakcina.md
+++ b/_posts/cyr/2021-07-13-vakcina.md
@@ -7,58 +7,73 @@ ref: vaccine
 tags: медицина пандемия вакцина
 ---
 
-Ақырғы мағлыўматларға қарағанда Өзбекистанда усы күнге шекем халық арасында толық вакцина алғанлар шама 700 мыңнан зыят адамды қурайды екен (процент есабында 2%, тек 19 жастан жоқарыларды есапласақ 3%тен сәл көплеў). Бул көрсеткиш жүдә ҳәм аз есапланады, ғалабалық иммунитет ушын кеминде 60-70% халықтың вакцина алыўы талап етилетуғынын есапқа алсақ. Вакцинация жедел түрде алып барылған мәмлекетлерде (Израиль, Уллы Британия, АҚШ) аўырыўлар саныда, өлимлер саныда есесине азайды.
+Соңғы мағлыўматларға қарағанда, Өзбекстанда усы күнге шекем халық арасында толық вакцина алған адамлар саны, шама менен, 700 мыңнан зыятты қурайды (процент есабында 2%, тек 19 жастан жоқарыларды есаплағанда, 3% тен сәл көплеў). Ғалабалық иммунитетти тәмийинлеў ушын, кеминде 60-70% халықтың вакцина алыўы талап етилетуғынлығын есапқа алсақ, бул көрсеткиш жүдә ҳәм аз есапланады. Вакцинация жедел түрде алып барылған мәмлекетлерде, солар қатарында Израиль, Уллы Британия, АҚШ-та коронавирус пенен наўқасланғанлар саны да, өлимлер көрсеткиши де есесине азайғанлығын гүзетиўимиз мүмкин.
 
-Вакцинацияның пайдасы бар екенине жарқын мысаллар көз алдымызда турып, не ушын адамларда вакцина алыўға ондай қәлеў я қызығыўшылық жоқ? Мениң эксперт емес пикиримше буған бир неше себеплер бар.
+Вакцинацияның пайдасы бар екенлигине айқын мысаллар көз алдымызда бола турып, неликтен адамларда вакцина алыўға ол дәрежеде қәлеў яки қызығыўшылық жоқ? Мениң пикиримше, буған бирқанша себеплер бар.
 
-_Бириншиден_, бул ҳүкимет тәрепинен жетерли қоллап-қуўатлаў болмағанында. Жоқарыда мен келтирип өткен мәмлекетлердиң басшылары вакцинация басланыўы менен бириншилер қатарында вакцина алды. Бизлерде ҳәм үлги ретинде бириншилерден болып президент пенен бас ўәзир вакцина алып, мине бизлер алдық, вакциналарға исениўге болады, енди сизлер ҳәм алың дегендей месседж бергенинде, бәлким адамларда көплеў исеним болыўы мүмкин еди. Оннан тысқары информацион қоллап қуўатлаў ҳәм ондай жақсы болмағандай. Вирус ҳәм вакцина ҳаққында әпиўайы тилде барлық медиа орталықларда кампаниялар шөлкемлестириў, адамлар тәрепинен көп берилетуғын сораўларға толық түсиндирме бериў, вакцинаның пайдасын түсиндириўге жергиликли селебритилерди шақырыў сыяқлы илажлардан толық пайдаланылғанба екен?
+Бириншиден, бул бойынша ҳүкимет тәрепинен жетерли дәрежеде қоллап-қуўатлаў болмағанлығынан. Жоқарыда мен келтирип өткен мәмлекетлердиң басшылары вакцинация басланыўы менен, бириншилер қатарында вакцина дозаларын қабыл етип алды. Бизлерде де, бириншилерден болып, президент ҳәм бас министр вакцина алып, “мине, бизлер алдық, вакциналарға исениўге болады, енди сизлер ҳәм алың” дегендей шақырық жоллағанында, бәлким, адамларда вакцинацияға деген көбирек исеним пайда болар ма еди.
 
-_Екиншиси_, билимлендириў дәрежеси төменлиги. Көпшиликке мәлим, бизлердиң билимлендириў системамыз узақ ўақыттан бери кризисте. Буның нәтийжесинде көпшилик адамлар мағлыўматты қалай излеўдиде билмейди, бар мағлыўматтың қайсысына исениў кереклигинде ажырата алмайды (яғный "фейк ньюз"ге бейимлиги жоқары). Соның ақыбетинде, ондай адамларды "вакцина арқалы Билл Гейтс дүнья жүзин чиплап атыр" деп исендириўде аңсатлаў. Телеграм каналларда тарқатылған ҳәр қыйлы ана вакцина алған анаў болыпты, мына вакцина алған мынандай болыпты деген пикирлерге көпшилик исенетуғынға усайды.
+Буннан тысқары информацион қоллап-қуўатлаў да айтарлық дәрежеде жақсы болмаған сыяқлы. Вирус ҳәм вакцина ҳаққында әпиўайы тилде барлық медиа орталықларда кампаниялар шөлкемлестириў, адамлар тәрепинен көп берилетуғын сораўларға толық түсиндирме бериў, вакцинаның пайдасын түсиндириўге жергиликли селебритилерди шақырыў сыяқлы илажлардан толық пайдаланылды ма екен?
 
-_Үшиншиси_, бул вакциналардың өзлери. Ҳәзирги күнде Өзбекистанда тийкарынан Россияның Спутник V ҳәм Қытай менен бирге шығарылған ZF-UZ-VAC2001 вакциналары қолланылады (AstraZeneca ҳәм азмас алып келинген деп оқығандай едим). Спутник V'де, ZF-UZ-VAC2001'де Жәҳән ден-саўлықты сақлаў шөлкеми (ЖДСШ) тәрепинен тастыйқланған вакциналар қатарына кирмейди. Бул енди тийкарғы себеп емес деп ойлайман, бирақ өзи алдыннан онша исенбейтуғын халықтың исениминиң артыўына алып келмеген шығар. Егер адамларда "батыс"та шығарылған Pfizer, Moderna, AstraZeneca вакциналарын алыў имкәнияты болғанда, жағдайдың позитив тәрепке өзгериўи мүмкин болар ма еди?
+Екиншиден, билимлендириў дәрежеси төменлиги де роль ойнады. Көпшиликке мәлим, бизиң билимлендириў системамыз узақ ўақыттан берли кризисте. Буның нәтийжесинде, көпшилик адамлар өзине зәрүрли мағлыўматты қалай излеўди де билмейди, бар мағлыўматтың қайсысына исениў кереклигин де белгилей алмайды, яғный “fake news”ге бейимлилиги жоқары. Сонлықтан, бундай адамларды “Билл Гейтс вакцина арқалы дүнья жүзин чиплап атыр” деп исендириў де аңсатырақ болады. Телеграм-каналларда тарқатылған ҳәр қыйлы “ана вакцинаны алған анаў болыпты, мына вакцина алған адам мынандай болыпты” деген пикирлерге көпшилик исенетуғын усайды.
 
-_Ақырғысы_, ҳүкиметке деген исеним азлығы (я улыўма жоқлығы). Бул онша темаға байланысы жоқтай көриниўи мүмкин, бирақ маған вакцинация дәрежеси менен ҳүкиметке болған исеним арасында туўры корреляция бардай. Яғный, өз ҳүкиметине исенген халықта вакцинация дәрежесиде жоқарылаў болады (мәжбүрий вакцинация енгизиўди ойлап атырған мәмлекетлерди есапқа алмаймыз). Буған жарқын мысал қылып Россияны көрсетиўгеде болады. Өзи бириншилерден болып вакцина ислеп шыққан сайланды мәмлекет болыўына қарамастан, өзиниң халқы өзинде ислеп шығарылған вакцинаға болған исеними жоқары емес. Әдетте, ҳүкимет бир басламаны алға сүрсе, халық оннан бир ҳийле излейди, қурыдан-қуры қылып атырған жоққо бул нәрсени, булар бир нәрсе ойлағанғо деп (себеби алдын неше рет усындай болып алданған-да!). Бул жердеде сондай, булар вакцина алың дейди, бирақ өзлери алмайды, алсада басқа "жақсысын" алады, ал бизлерге "жаманын" салдыражақ деп ойлаўы мүмкин адамлар.
+Үшиншиден, бул вакциналардың өзлери. Ҳәзирги күнде Өзбекстанда, тийкарынан, Россияның Спутник V ҳәм Қытай менен биргеликте ислеп шығылған ZF-UZ-VAC2001 вакциналары қолланылып атыр (AstraZeneca ҳәм азмаз алып келинген деп оқығандай едим).
 
-Енди вацинаның өзине келсек, мениң жеке пикиримше, оның адамға ҳәм жәмийетке болған пайдасы зыянынан әдеўир көплеў. Соның ушын мен вакцина алыўды ҳәр бир адамға мәсләҳәт еткен болар едим (егер медициналық жақтан айырықша жағдайыңыз болмаса). Ҳәзирги ковидке қарсы вакциналар салыстырмалы қысқа ўақытта ислеп шығарыўға туўры келген болыўы мүмкин, бирақ не дегени менен олар ҳәзирги күнге шекем жетип келген илим ҳәм технологиялардағы жетискенликлердиң нәтийжеси есапланады. Мәселен, Спутник V алдын Эбола кеселлигине қарсы шығарылған вакцинаға тийкарланып исленген.
+Спутник V де, ZF-UZ-VAC2001 де Жәҳән денсаўлықты сақлаў шөлкеми (ЖДСШ) тәрепинен тастыйықланған вакциналар қатарына кирмейди. Бул енди тийкарғы себеп деп есапламайман.
 
-Жуўмақ ретинде, вакциналар ҳаққында адамларда ҳәр қыйлы мыш-мыш яки түсинбеўшиликлер арқасында жийи пайда болған сораўларға жуўап бериўге ҳәрекет етип көрсек (бул мениң жуўапларым емес, ал ҳәр қыйлы экспертлер тәрепинен берилген мағлыўматлардан оқығанларым).
+Егер адамларда батыста ислеп шығарылған Pfizer, Moderna, AstraZeneca сыяқлы вакциналардан алыў имканияты болғанда, жағдайдың позитив тәрепке өзгериўи илажы бар ма еди?
 
----
+Ақырғысы, ҳүкиметке деген исенимниң азлығы ямаса, улыўма, жоқлығы. Буның темаға оншелли байланысы жоқтай көриниўи мүмкин, бирақ мен ушын вакцинация дәрежеси менен ҳүкиметке болған исеним арасында тиккелей қатнас бардай. Яғный, өз ҳүкиметине исенген халықта вакцинация дәрежеси де жоқарылаў болады (мәжбүрий вакцинация енгизиўди көрип шығып атырған мәмлекетлерди есапқа алмаймыз). Буған айқын мысал етип Россияны көрсетиўге болады. Өзи бириншилерден болып вакцина ислеп шыққан сайланды мәмлекет болыўына қарамастан, өз халқының өзлеринде ислеп шығарылған вакцинаға болған исеними жоқары емес.
 
-> "Мен вакцина алыўға қорқаман, себеби әдетте вакциналарды ислеп шығыўға 10 жыллап кетеди, ал ҳәзиргилери болса бир неше айда-ақ ислеп шығылды"
+Әдетте ҳүкимет бир басламаны алға сүрсе, халық оннан бир ҳийле излейди — “қурыдан-қуры ислеп атырған жоқ-аў бул нәрсени, булардың бир ойлағаны бар...” (өйткени, алдын да талай мәрте алданған болады). Бул жерде де тап солай: булар вакцина алың деп, өзлери алмайды, алса да, басқа “жақсысын” алады, ал бизлерге “жаманын” салдыражақ деген пикирлер әпиўайы халық арасында тарала баслайды.
 
-_Дурыс, әдетте вакциналарды ислеп шығарыў бул узақ процесс, себеби оны ислеп шыққаннан кейин узақ ўақыт сынаўдан өткизиледи. Бирақ ҳәзир айрықша жағдай болғаны ушын, вакцинаны ислеп шығарыў, оны сынақлардан өткизиў процессин тезлестириўге үлкен мүтәжлик пайда болды. Не дегени менен, вакциналар қысқа ўақытта исленип шыққан болсада, әдетте олар адамзаттың усы күнге шекем илим, технология, медицина ҳәм басқа тараўларда жыйнаған билимлерине тийкарланған. Яғный, бир неше айда нольден ҳеш бир вакцина ислеп шығылған жоқ, ҳәммеси сол алдынғы кең жыйналған билим ҳәм тәжирийбелер тийкарында ислеп шығылған. Вакцинацияны жедел түрде алып барып атырған мәмлекетлерде жыйналған мағлыўматларға таянатуғын болсақ, вакциналарды қоллаў нәтийжесинде ҳеш бир үлкен күтилмеген ақыбетлерге алып келмеген. Соның ушын вакциналарды биймәлел қәўипсиз деп айтсақ болады._
+Енди вакцинаның өзине келсек, мениң жеке пикиримше, оның адамға ҳәм жәмийетке болған пайдасы биз ойлағаннан әдеўир көплеў. Сол себепли, мен вакцина алыўды ҳәрбир адамға мәсләҳәт еткен болар едим. Ҳәзирги Covid’ке қарсы вакциналарды салыстырмалы қысқа ўақытта ислеп шығарыўға туўры келген болыўы мүмкин, лекин, бәрибир, олар ҳәзирги күнге шекем жетип келген илим ҳәм технологиялардың жетискенликлери нәтийжеси есапланады. Мысалы, Спутник V алдын Эбола кеселлигине қарсы жаратылған вакцинаға тийкарланып исленген.
 
----
-
-> Мен Өзбекистандағы вакциналарға (Спутник V, ZF-UZ-VAC2001) исенбеймен
-
-_Мениңше бундай исенбеўшиликтиң бас себеби бул вакциналардың еле толық сынаў басқышынан өтпей турып есаптан өтип кеткени, яғный пайдаланыўға шығарылғаны болса керек. Буған бас себеп сиясий себеплер болған деп ойлайман. Россияда Спутникти дүньядағы ең биринши есаптан өткен вакцина деп аталыўын қәлеген, сол себепли еле сынаўлардың 3-басқышы тамамланбастан алдың-ақ өткизип жиберген. Бирақ, Спутник V усы ўақытқа шекем бир неше мәмлекетлерде бир неше миллион дозасы пайдаланылды ҳәм үлкен машқалалар болғаны ҳаққында хабарлар болмады. Қытай менен биргеликте исленген вакцина ҳаққында ҳәм ондай гәплер болмады. Соның ушын жоқарыда улыўма вакциналардың қәўипсизлиги ҳаққында айтылған гәплерди бул еки вакцинаға тийисли деп ойлайман. Мен өзим Өзбекистанда болғанымда бар вакцинаның қәлегенин алған болар едим._
+Жуўмақ ретинде, вакциналар бойынша ҳәр қыйлы мыш-мыш яки түсинбеўшиликлер арқасында жийи пайда болған сораўларға жуўап бериўге ҳәрекет етип көрсек. Және де, соны айтып өтиўим керек, булар тиккелей мениң жуўапларым емес, ал ҳәр қыйлы экспертлер тәрепинен берилген мағлыўматлардан оқығанларым.
 
 ---
 
-> Вакцина өзи пайдасы барма, вакцина алсада коронавирус жуқтырған адамлар ҳаққында еситтикқо?
+> Мен вакцина алыўға қорқаман, себеби әдетте вакциналарды ислеп шығыўға он жыллап ўақыт кетеди, ал ҳәзирги коронавирусқа қарсылары болса бирнеше айда-ақ ислеп шығылды.
 
-_Ең биринши факт, вакцина бул сизди вирустан 100% қорғайды дегени емес. Ҳеш бир вакцина бундай кепиллик бермейди. Вакцинаның мақсети сизиң организмиңизди вирусқа қарсы гүресиўге таярлаў. Көпшилик жағдайларда вирус жуқтырыўынан сақлайды. Егер вирус жуққан жағдайда ҳәм аўырыўдың салыстырмалы жеңиллеў өтиўин тәмийнлейди. Сол ушын вакцина алғанлар ҳәм аўырыўы мүмкин, бул күтилмеген жағдай емес. Парқы тек, вакцина алмаған гейбир адамларда вирус қатты өтлесип кетип, өлим дәрежесине шекем жеткериўи мүмкин болса, вакцина алған адам бундай жағдайдың итималлығын бир неше есе рет азайтады._
+_Дурыс, әдетте вакциналарды ислеп шығыў бул узақ мүддетли процесс. Себеби, оны ислеп шыққаннан кейин, узақ ўақыт сынақтан өткериледи. Лекин, ҳәзир айрықша жағдай болғанлығы ушын, вакцинаны ислеп шығыў, оны сынақлардан өткериў процесин тезлестириўге үлкен мүтәжлик пайда болды. Вакциналар қысқа ўақытта исленип шығылған болса да, бәрибир, олар адамзаттың усы күнге шекемги топлаған илим, технология, медицина ҳәм басқа тараўлардағы билимлерине тийкарланған. Яғный, бирнеше ай ишинде ҳешбир вакцина нольден баслап ислеп шығылған жоқ, ҳәммеси сол алдынғы кең жыйналған билим ҳәм тәжирийбелер тийкарында ислеп шығылды._
 
----
-
-> Ҳәзирги вакциналар таза шығып атырған штаммларға (мәселен Дельта) қарсы гүресе алама, яки олар ушын қайтадан вакцина алыўға туўры келеме?
-
-_Экспертлердиң айтыўынша вакциналар тазадан шығып атырған штаммларға қарсы еле табыслы гүресе алады, бирақ дельта штаммға қарсы эффективлиги сәл азайғаны ҳаққында айтылмақта._
+_Вакцинацияны жедел түрде алып барып атырған мәмлекетлерде, жыйналған мағлыўматларға таянатуғын болсақ, вакциналарды қоллаў нәтийжесинде, ҳешбир күтилмеген ақыбетлерге алып келиў жағдайлары бақланбады. Сонлықтан, вакциналарды биймәлел қәўипсиз деп айтсақ болады._
 
 ---
 
-> Мен коронавирус болып аўырдым, маған вакцина шәрт емесқо?
+> Мен өзим Өзбекстанда қолланылып атырған вакциналарға (Спутник V, ZF-UZ-VAC2001) исенбеймен.
 
-_Яқ, аўырған болсаңыз ҳәм вакцина алғаныңыз жақсы дейди экспертлер. Себеби аўырғанда арттырған антиденелер узақ ўақытқа жетпейди, сонлықтан организмниң гүресшеңлигин асырыў ушын бираз ўақыттан кейин (6 ай?) вакцина алғаныңыз мақул деген жуўмаққа келген тараў маманлары._
+_Мениңше, бундай исенбеўшиликтиң баслы себеби бул вакциналардың еле толық сынаў басқышынан өтпей турып есаптан өткерилгенлиги, яғный пайдаланыўға жетип барғанлығы болса керек. Буның тийкарында сиясий көз қараслар болған деп ойлайман._
+
+_Россия Спутниктиң “дүньяда ең биринши есаптан өткен коронавирусқа қарсы вакцина” деп аталыўын қәлеген, сол себепли болса керек, еле сынақлардың үшинши басқышы жуўмақланбай турып, оны есаптан өткизип жиберген. Деген менен, усы ўақытқа шекем бирқанша мәмлекетлерде Спутник V-ниң бирнеше миллион дозасы пайдаланылды ҳәм үлкен машқалалар болғанлығы ҳаққында хабарларды еситпедик._
+
+_Қытай менен биргеликте ислеп шығылған вакцина ҳаққында да негатив хабарлар болмады. Соның ушын, жоқарыдағы, улыўма, вакциналардың қәўипсизлиги ҳаққында айтылған гәплерди тек усы еки вакцинаға тийисли деп ойлайман. Мен өзим егер Өзбекстанда болғанымда, бар вакцинаның қәлеген биреўин алған болар едим._
 
 ---
 
-Кеширерсиз, дым узын пост болып кетти, бирақ кимгедир пайдасы тийип қалар деп үмит етемен. Илажы барынша вакцина алың, бул арқалы тек өзиңизди емес, ал жәмийеттиң ҳәм бул пандемиядан тез шығып кетиўине үлес қосқан боласыз.
+> Вакцинаның пайдасы бар ма өзи? Вакцина алған болса да, коронавирус жуқтырған адамлар ҳаққында еситтик ғой?
 
-p.s. Егер қызығыўшылар болса, төмендеги силтемелер бойынша жийи берилетуғын сораўларға жуўаплар тапсаңыз болады:
+_Ең биринши факт, вакцина алды дегени — бул сиз вирустан 100% қорғандыңыз дегени емес. Ҳешбир вакцина менен бундай кепиллик берип болмайды. Вакцинаның мақсети сизиң организмиңизди вирусқа қарсы гүресиўге таярлаў. Көпшилик жағдайларда вирус жуқтырыўынан сақлайды._
+
+_Егер вирус жуқтырылған жағдайда да, кеселликтиң салыстырмалы түрде жеңиллеў өтиўин тәмийинлейди. Усыларды есапқа алсақ, вакцина алған адамлар да вирус жуқтырыўы мүмкин, бул күтилмеген жағдай емес. Парқы тек сонда, вакцина алмаған гейбир адамларда кеселлик қатты өтлесип кетип, өлим дәрежесине шекем жеткериўи мүмкин болса, вакцина алған адамда бундай жағдайдың итималлылығы бирнеше есе азаяды._
+
+---
+
+> Ҳәзирги вакциналар жаңадан пайда болып атырған штамларға (мәселен, Дельта) қарсы гүресе ала ма яки олар ушын қайтадан вакцина алыўға туўра келе ме?
+
+_Экспертлердиң айтыўынша, вакциналар жаңадан пайда болып атырған штамларға қарсы еле табыслы гүресе алады. Бирақ та, Дельта штамына қарсы эффективлилиги сәл азайғанлығы ҳаққында айтылмақта._
+
+---
+
+> Мен коронавирус болып аўырдым, маған вакцина шәрт емес ғой?
+
+_Яқ, вирус пенен кеселленген болсаңыз да, вакцина алғаныңыз мақул деп мәсләҳәт береди экспертлер. Себеби, кеселлик дәўиринде арттырылған антиденешелер узақ ўақытқа шекем хызмет етпейди, сонлықтан организмниң гүресшеңлигин асырыў мақсетинде, бираз мүддеттен соң (⁓6 ай) вакцина алғаныңыз мақул деген жуўмаққа келеди тараў маманлары._
+
+---
+
+Кеширерсиз, дым узын пост болып кетти. Лекин, бул мағлыўматлардың кимгедур пайдасы тийип қалар деп үмит етемен. Илажы болса, вакцина алың, бул арқалы тек өзиңизди емес, ал жәмийеттегилердиң де бул пандемиядан тез ҳәм аман-есен шығып кетиўине үлес қосқан боласыз.
+
+P. S. Қызығыўшылар болатуғын болса, төмендеги силтемелер артында жийи берилетуғын сораўларға жуўаплар келтирилген:
 
 - [https://meduza.io/feature/2021/07/06/nauchnyy-redaktor-meduzy-aleksandr-ershov-ochen-perezhivaet-chto-mnogie-do-sih-por-ne-vaktsinirovany](https://meduza.io/feature/2021/07/06/nauchnyy-redaktor-meduzy-aleksandr-ershov-ochen-perezhivaet-chto-mnogie-do-sih-por-ne-vaktsinirovany)
-- [https://www.tallinn.ee/Chasto-zadavaemye-voprosy-o-vaktsinatsii](https://www.tallinn.ee/Chasto-zadavaemye-voprosy-o-vaktsinatsii)
 - [https://www.health.gov.au/sites/default/files/documents/2021/06/covid-19-vaccination-covid-19-covid-19-vaccines-common-questions_17.docx](https://www.health.gov.au/sites/default/files/documents/2021/06/covid-19-vaccination-covid-19-covid-19-vaccines-common-questions_17.docx)
