--- a/_posts/lat/2021-07-13-vakcina.md
+++ b/_posts/lat/2021-07-13-vakcina.md
@@ -7,58 +7,73 @@ ref: vaccine
 tags: medicina pandemiya vakcina
 ---
 
-Aqırǵı maǵlıwmatlarǵa qaraǵanda Ózbekistanda usı kúnge shekem xalıq arasında tolıq vakcina alǵanlar shama 700 mıńnan zıyat adamdı quraydı eken (procent esabında 2%, tek 19 jastan joqarılardı esaplasaq 3%ten sál kóplew). Bul kórsetkish júdá hám az esaplanadı, ǵalabalıq immunitet ushın keminde 60-70% xalıqtıń vakcina alıwı talap etiletuǵının esapqa alsaq. Vakcinaciya jedel túrde alıp barılǵan mámleketlerde (Izrail, Ullı Britaniya, AQSh) awırıwlar sanıda, ólimler sanıda esesine azaydı.
+Sońǵı maǵlıwmatlarǵa qaraǵanda, Ózbekstanda usı kúnge shekem xalıq arasında tolıq vakcina alǵan adamlar sanı, shama menen, 700 mıńnan zıyattı quraydı (procent esabında 2%, tek 19 jastan joqarılardı esaplaǵanda, 3% ten sál kóplew). Ǵalabalıq immunitetti támiyinlew ushın, keminde 60-70% xalıqtıń vakcina alıwı talap etiletuǵınlıǵın esapqa alsaq, bul kórsetkish júdá hám az esaplanadı. Vakcinaciya jedel túrde alıp barılǵan mámleketlerde, solar qatarında Izrail, Ullı Britaniya, AQSh-ta koronavirus penen nawqaslanǵanlar sanı da, ólimler kórsetkishi de esesine azayǵanlıǵın gúzetiwimiz múmkin.
 
-Vakcinaciyanıń paydası bar ekenine jarqın mısallar kóz aldımızda turıp, ne ushın adamlarda vakcina alıwǵa onday qálew ya qızıǵıwshılıq joq? Meniń ekspert emes pikirimshe buǵan bir neshe sebepler bar.
+Vakcinaciyanıń paydası bar ekenligine ayqın mısallar kóz aldımızda bola turıp, nelikten adamlarda vakcina alıwǵa ol dárejede qálew yaki qızıǵıwshılıq joq? Meniń pikirimshe, buǵan birqansha sebepler bar.
 
-_Birinshiden_, bul húkimet tárepinen jeterli qollap-quwatlaw bolmaǵanında. Joqarıda men keltirip ótken mámleketlerdiń basshıları vakcinaciya baslanıwı menen birinshiler qatarında vakcina aldı. Bizlerde hám úlgi retinde birinshilerden bolıp prezident penen bas wázir vakcina alıp, mine bizler aldıq, vakcinalarǵa iseniwge boladı, endi sizler hám alıń degendey messedj bergeninde, bálkim adamlarda kóplew isenim bolıwı múmkin edi. Onnan tısqarı informacion qollap quwatlaw hám onday jaqsı bolmaǵanday. Virus hám vakcina haqqında ápiwayı tilde barlıq media ortalıqlarda kampaniyalar shólkemlestiriw, adamlar tárepinen kóp beriletuǵın sorawlarǵa tolıq túsindirme beriw, vakcinanıń paydasın túsindiriwge jergilikli selebritilerdi shaqırıw sıyaqlı ilajlardan tolıq paydalanılǵanba eken?
+Birinshiden, bul boyınsha húkimet tárepinen jeterli dárejede qollap-quwatlaw bolmaǵanlıǵınan. Joqarıda men keltirip ótken mámleketlerdiń basshıları vakcinaciya baslanıwı menen, birinshiler qatarında vakcina dozaların qabıl etip aldı. Bizlerde de, birinshilerden bolıp, prezident hám bas ministr vakcina alıp, “mine, bizler aldıq, vakcinalarǵa iseniwge boladı, endi sizler hám alıń” degendey shaqırıq jollaǵanında, bálkim, adamlarda vakcinaciyaǵa degen kóbirek isenim payda bolar ma edi.
 
-_Ekinshisi_, bilimlendiriw dárejesi tómenligi. Kópshilikke málim, bizlerdiń bilimlendiriw sistemamız uzaq waqıttan beri kriziste. Bunıń nátiyjesinde kópshilik adamlar maǵlıwmattı qalay izlewdide bilmeydi, bar maǵlıwmattıń qaysısına iseniw kerekliginde ajırata almaydı (yaǵnıy "feyk nyuz"ge beyimligi joqarı). Sonıń aqıbetinde, onday adamlardı "vakcina arqalı Bill Geyts dúnya júzin chiplap atır" dep isendiriwde ańsatlaw. Telegram kanallarda tarqatılǵan hár qıylı ana vakcina alǵan anaw bolıptı, mına vakcina alǵan mınanday bolıptı degen pikirlerge kópshilik isenetuǵınǵa usaydı.
+Bunnan tısqarı informacion qollap-quwatlaw da aytarlıq dárejede jaqsı bolmaǵan sıyaqlı. Virus hám vakcina haqqında ápiwayı tilde barlıq media ortalıqlarda kampaniyalar shólkemlestiriw, adamlar tárepinen kóp beriletuǵın sorawlarǵa tolıq túsindirme beriw, vakcinanıń paydasın túsindiriwge jergilikli selebritilerdi shaqırıw sıyaqlı ilajlardan tolıq paydalanıldı ma eken?
 
-_Úshinshisi_, bul vakcinalardıń ózleri. Házirgi kúnde Ózbekistanda tiykarınan Rossiyanıń Sputnik V hám Qıtay menen birge shıǵarılǵan ZF-UZ-VAC2001 vakcinaları qollanıladı (AstraZeneca hám azmas alıp kelingen dep oqıǵanday edim). Sputnik V'de, ZF-UZ-VAC2001'de Jáhán den-sawlıqtı saqlaw shólkemi (JDSSh) tárepinen tastıyqlanǵan vakcinalar qatarına kirmeydi. Bul endi tiykarǵı sebep emes dep oylayman, biraq ózi aldınnan onsha isenbeytuǵın xalıqtıń iseniminiń artıwına alıp kelmegen shıǵar. Eger adamlarda "batıs"ta shıǵarılǵan Pfizer, Moderna, AstraZeneca vakcinaların alıw imkániyatı bolǵanda, jaǵdaydıń pozitiv tárepke ózgeriwi múmkin bolar ma edi?
+Ekinshiden, bilimlendiriw dárejesi tómenligi de rol oynadı. Kópshilikke málim, biziń bilimlendiriw sistemamız uzaq waqıttan berli kriziste. Bunıń nátiyjesinde, kópshilik adamlar ózine zárúrli maǵlıwmattı qalay izlewdi de bilmeydi, bar maǵlıwmattıń qaysısına iseniw kerekligin de belgiley almaydı, yaǵnıy “feyk nyuz”ge beyimliligi joqarı. Sonlıqtan, bunday adamlardı “Bill Geyts vakcina arqalı dúnya júzin chiplap atır” dep isendiriw de ańsatıraq boladı. Telegram-kanallarda tarqatılǵan hár qıylı “ana vakcinanı alǵan anaw bolıptı, mına vakcina alǵan adam mınanday bolıptı” degen pikirlerge kópshilik isenetuǵın usaydı.
 
-_Aqırǵısı_, húkimetke degen isenim azlıǵı (ya ulıwma joqlıǵı). Bul onsha temaǵa baylanısı joqtay kóriniwi múmkin, biraq maǵan vakcinaciya dárejesi menen húkimetke bolǵan isenim arasında tuwrı korrelyaciya barday. Yaǵnıy, óz húkimetine isengen xalıqta vakcinaciya dárejeside joqarılaw boladı (májbúriy vakcinaciya engiziwdi oylap atırǵan mámleketlerdi esapqa almaymız). Buǵan jarqın mısal qılıp Rossiyanı kórsetiwgede boladı. Ózi birinshilerden bolıp vakcina islep shıqqan saylandı mámleket bolıwına qaramastan, óziniń xalqı ózinde islep shıǵarılǵan vakcinaǵa bolǵan isenimi joqarı emes. Ádette, húkimet bir baslamanı alǵa súrse, xalıq onnan bir hiyle izleydi, qurıdan-qurı qılıp atırǵan joqqo bul nárseni, bular bir nárse oylaǵanǵo dep (sebebi aldın neshe ret usınday bolıp aldanǵan-da!). Bul jerdede sonday, bular vakcina alıń deydi, biraq ózleri almaydı, alsada basqa "jaqsısın" aladı, al bizlerge "jamanın" saldırajaq dep oylawı múmkin adamlar.
+Úshinshiden, bul vakcinalardıń ózleri. Házirgi kúnde Ózbekstanda, tiykarınan, Rossiyanıń Sputnik V hám Qıtay menen birgelikte islep shıǵılǵan ZF-UZ-VAC2001 vakcinaları qollanılıp atır (AstraZeneca hám azmaz alıp kelingen dep oqıǵanday edim).
 
-Endi vacinanıń ózine kelsek, meniń jeke pikirimshe, onıń adamǵa hám jámiyetke bolǵan paydası zıyanınan ádewir kóplew. Sonıń ushın men vakcina alıwdı hár bir adamǵa másláhát etken bolar edim (eger medicinalıq jaqtan ayırıqsha jaǵdayıńız bolmasa). Házirgi kovidke qarsı vakcinalar salıstırmalı qısqa waqıtta islep shıǵarıwǵa tuwrı kelgen bolıwı múmkin, biraq ne degeni menen olar házirgi kúnge shekem jetip kelgen ilim hám texnologiyalardaǵı jetiskenliklerdiń nátiyjesi esaplanadı. Máselen, Sputnik V aldın Ebola keselligine qarsı shıǵarılǵan vakcinaǵa tiykarlanıp islengen.
+Sputnik V de, ZF-UZ-VAC2001 de Jáhán densawlıqtı saqlaw shólkemi (JDSSh) tárepinen tastıyıqlanǵan vakcinalar qatarına kirmeydi. Bul endi tiykarǵı sebep dep esaplamayman.
 
-Juwmaq retinde, vakcinalar haqqında adamlarda hár qıylı mısh-mısh yaki túsinbewshilikler arqasında jiyi payda bolǵan sorawlarǵa juwap beriwge háreket etip kórsek (bul meniń juwaplarım emes, al hár qıylı ekspertler tárepinen berilgen maǵlıwmatlardan oqıǵanlarım).
+Eger adamlarda batısta islep shıǵarılǵan Pfizer, Moderna, AstraZeneca sıyaqlı vakcinalardan alıw imkaniyatı bolǵanda, jaǵdaydıń pozitiv tárepke ózgeriwi ilajı bar ma edi?
 
----
+Aqırǵısı, húkimetke degen isenimniń azlıǵı yamasa, ulıwma, joqlıǵı. Bunıń temaǵa onshelli baylanısı joqtay kóriniwi múmkin, biraq men ushın vakcinaciya dárejesi menen húkimetke bolǵan isenim arasında tikkeley qatnas barday. Yaǵnıy, óz húkimetine isengen xalıqta vakcinaciya dárejesi de joqarılaw boladı (májbúriy vakcinaciya engiziwdi kórip shıǵıp atırǵan mámleketlerdi esapqa almaymız). Buǵan ayqın mısal etip Rossiyanı kórsetiwge boladı. Ózi birinshilerden bolıp vakcina islep shıqqan saylandı mámleket bolıwına qaramastan, óz xalqınıń ózlerinde islep shıǵarılǵan vakcinaǵa bolǵan isenimi joqarı emes.
 
-> Men vakcina alıwǵa qorqaman, sebebi ádette vakcinalardı islep shıǵıwǵa 10 jıllap ketedi, al házirgileri bolsa bir neshe ayda-aq islep shıǵıldı
+Ádette húkimet bir baslamanı alǵa súrse, xalıq onnan bir hiyle izleydi — “qurıdan-qurı islep atırǵan joq-aw bul nárseni, bulardıń bir oylaǵanı bar...” (óytkeni, aldın da talay márte aldanǵan boladı). Bul jerde de tap solay: bular vakcina alıń dep, ózleri almaydı, alsa da, basqa “jaqsısın” aladı, al bizlerge “jamanın” saldırajaq degen pikirler ápiwayı xalıq arasında tarala baslaydı.
 
-_Durıs, ádette vakcinalardı islep shıǵarıw bul uzaq process, sebebi onı islep shıqqannan keyin uzaq waqıt sınawdan ótkiziledi. Biraq házir ayrıqsha jaǵday bolǵanı ushın, vakcinanı islep shıǵarıw, onı sınaqlardan ótkiziw processin tezlestiriwge úlken mútájlik payda boldı. Ne degeni menen, vakcinalar qısqa waqıtta islenip shıqqan bolsada, ádette olar adamzattıń usı kúnge shekem ilim, texnologiya, medicina hám basqa tarawlarda jıynaǵan bilimlerine tiykarlanǵan. Yaǵnıy, bir neshe ayda nolden hesh bir vakcina islep shıǵılǵan joq, hámmesi sol aldınǵı keń jıynalǵan bilim hám tájiriybeler tiykarında islep shıǵılǵan. Vakcinaciyanı jedel túrde alıp barıp atırǵan mámleketlerde jıynalǵan maǵlıwmatlarǵa tayanatuǵın bolsaq, vakcinalardı qollaw nátiyjesinde hesh bir úlken kútilmegen aqıbetlerge alıp kelmegen. Sonıń ushın vakcinalardı biymálel qáwipsiz dep aytsaq boladı._
+Endi vakcinanıń ózine kelsek, meniń jeke pikirimshe, onıń adamǵa hám jámiyetke bolǵan paydası biz oylaǵannan ádewir kóplew. Sol sebepli, men vakcina alıwdı hárbir adamǵa másláhát etken bolar edim. Házirgi Covid’ke qarsı vakcinalardı salıstırmalı qısqa waqıtta islep shıǵarıwǵa tuwrı kelgen bolıwı múmkin, lekin, báribir, olar házirgi kúnge shekem jetip kelgen ilim hám texnologiyalardıń jetiskenlikleri nátiyjesi esaplanadı. Mısalı, Sputnik V aldın Ebola keselligine qarsı jaratılǵan vakcinaǵa tiykarlanıp islengen.
 
----
-
-> Men Ózbekistandaǵı vakcinalarǵa (Sputnik V, ZF-UZ-VAC2001) isenbeymen
-
-_Menińshe bunday isenbewshiliktiń bas sebebi bul vakcinalardıń ele tolıq sınaw basqıshınan ótpey turıp esaptan ótip ketkeni, yaǵnıy paydalanıwǵa shıǵarılǵanı bolsa kerek. Buǵan bas sebep siyasiy sebepler bolǵan dep oylayman. Rossiyada Sputnikti dúnyadaǵı eń birinshi esaptan ótken vakcina dep atalıwın qálegen, sol sebepli ele sınawlardıń 3-basqıshı tamamlanbastan aldıń-aq ótkizip jibergen. Biraq, Sputnik V usı waqıtqa shekem bir neshe mámleketlerde bir neshe million dozası paydalanıldı hám úlken mashqalalar bolǵanı haqqında xabarlar bolmadı. Qıtay menen birgelikte islengen vakcina haqqında hám onday gápler bolmadı. Sonıń ushın joqarıda ulıwma vakcinalardıń qáwipsizligi haqqında aytılǵan gáplerdi bul eki vakcinaǵa tiyisli dep oylayman. Men ózim Ózbekistanda bolǵanımda bar vakcinanıń qálegenin alǵan bolar edim._
+Juwmaq retinde, vakcinalar boyınsha hár qıylı mısh-mısh yaki túsinbewshilikler arqasında jiyi payda bolǵan sorawlarǵa juwap beriwge háreket etip kórsek. Jáne de, sonı aytıp ótiwim kerek, bular tikkeley meniń juwaplarım emes, al hár qıylı ekspertler tárepinen berilgen maǵlıwmatlardan oqıǵanlarım.
 
 ---
 
-> Vakcina ózi paydası barma, vakcina alsada koronavirus juqtırǵan adamlar haqqında esittikqo?
+> Men vakcina alıwǵa qorqaman, sebebi ádette vakcinalardı islep shıǵıwǵa on jıllap waqıt ketedi, al házirgi koronavirusqa qarsıları bolsa birneshe ayda-aq islep shıǵıldı.
 
-_Eń birinshi fakt, vakcina bul sizdi virustan 100% qorǵaydı degeni emes. Hesh bir vakcina bunday kepillik bermeydi. Vakcinanıń maqseti siziń organizmińizdi virusqa qarsı gúresiwge tayarlaw. Kópshilik jaǵdaylarda virus juqtırıwınan saqlaydı. Eger virus juqqan jaǵdayda hám awırıwdıń salıstırmalı jeńillew ótiwin támiynleydi. Sol ushın vakcina alǵanlar hám awırıwı múmkin, bul kútilmegen jaǵday emes. Parqı tek, vakcina almaǵan geybir adamlarda virus qattı ótlesip ketip, ólim dárejesine shekem jetkeriwi múmkin bolsa, vakcina alǵan adam bunday jaǵdaydıń itimallıǵın bir neshe ese ret azaytadı._
+_Durıs, ádette vakcinalardı islep shıǵıw bul uzaq múddetli process. Sebebi, onı islep shıqqannan keyin, uzaq waqıt sınaqtan ótkeriledi. Lekin, házir ayrıqsha jaǵday bolǵanlıǵı ushın, vakcinanı islep shıǵıw, onı sınaqlardan ótkeriw procesin tezlestiriwge úlken mútájlik payda boldı. Vakcinalar qısqa waqıtta islenip shıǵılǵan bolsa da, báribir, olar adamzattıń usı kúnge shekemgi toplaǵan ilim, texnologiya, medicina hám basqa tarawlardaǵı bilimlerine tiykarlanǵan. Yaǵnıy, birneshe ay ishinde heshbir vakcina nolden baslap islep shıǵılǵan joq, hámmesi sol aldınǵı keń jıynalǵan bilim hám tájiriybeler tiykarında islep shıǵıldı._
 
----
-
-> Házirgi vakcinalar taza shıǵıp atırǵan shtammlarǵa (máselen Delta) qarsı gúrese alama, yaki olar ushın qaytadan vakcina alıwǵa tuwrı keleme?
-
-_Ekspertlerdiń aytıwınsha vakcinalar tazadan shıǵıp atırǵan shtammlarǵa qarsı ele tabıslı gúrese aladı, biraq delta shtammǵa qarsı effektivligi sál azayǵanı haqqında aytılmaqta._
+_Vakcinaciyanı jedel túrde alıp barıp atırǵan mámleketlerde, jıynalǵan maǵlıwmatlarǵa tayanatuǵın bolsaq, vakcinalardı qollaw nátiyjesinde, heshbir kútilmegen aqıbetlerge alıp keliw jaǵdayları baqlanbadı. Sonlıqtan,vakcinalardı biymálel qáwipsiz dep aytsaq boladı._
 
 ---
 
-> Men koronavirus bolıp awırdım, maǵan vakcina shárt emesqo?
+> Men ózim Ózbekstanda qollanılıp atırǵan vakcinalarǵa (Sputnik V, ZF-UZ-VAC2001) isenbeymen.
 
-_Yaq, awırǵan bolsańız hám vakcina alǵanıńız jaqsı deydi ekspertler. Sebebi awırǵanda arttırǵan antideneler uzaq waqıtqa jetpeydi, sonlıqtan organizmniń gúressheńligin asırıw ushın biraz waqıttan keyin (6 ay?) vakcina alǵanıńız maqul degen juwmaqqa kelgen taraw mamanları._
+_Menińshe, bunday isenbewshiliktiń baslı sebebi bul vakcinalardıń ele tolıq sınaw basqıshınan ótpey turıp esaptan ótkerilgenligi, yaǵnıy paydalanıwǵa jetip barǵanlıǵı bolsa kerek. Bunıń tiykarında siyasiy kóz qaraslar bolǵan dep oylayman._
+
+_Rossiya Sputniktiń “dúnyada eń birinshi esaptan ótken koronavirusqa qarsı vakcina” dep atalıwın qálegen, sol sebepli bolsa kerek, ele sınaqlardıń úshinshi basqıshı juwmaqlanbay turıp, onı esaptan ótkizip jibergen. Degen menen, usı waqıtqa shekem birqansha mámleketlerde Sputnik V-niń birneshe million dozası paydalanıldı hám úlken mashqalalar bolǵanlıǵı haqqında xabarlardı esitpedik._
+
+_Qıtay menen birgelikte islep shıǵılǵan vakcina haqqında da negativ xabarlar bolmadı. Sonıń ushın, joqarıdaǵı, ulıwma, vakcinalardıń qáwipsizligi haqqında aytılǵan gáplerdi tek usı eki vakcinaǵa tiyisli dep oylayman. Men ózim eger Ózbekstanda bolǵanımda, bar vakcinanıń qálegen birewin alǵan bolar edim._
 
 ---
 
-Keshirersiz, dım uzın post bolıp ketti, biraq kimgedir paydası tiyip qalar dep úmit etemen. Ilajı barınsha vakcina alıń, bul arqalı tek ózińizdi emes, al jámiyettiń hám bul pandemiyadan tez shıǵıp ketiwine úles qosqan bolasız.
+> Vakcinanıń paydası bar ma ózi? Vakcina alǵan bolsa da, koronavirus juqtırǵan adamlar haqqında esittik ǵoy?
 
-p.s. Eger qızıǵıwshılar bolsa, tómendegi siltemeler boyınsha jiyi beriletuǵın sorawlarǵa juwap tapsańız boladı:
+_Eń birinshi fakt, vakcina aldı degeni — bul siz virustan 100% qorǵandıńız degeni emes. Heshbir vakcina menen bunday kepillik berip bolmaydı. Vakcinanıń maqseti siziń organizmińizdi virusqa qarsı gúresiwge tayarlaw. Kópshilik jaǵdaylarda virus juqtırıwınan saqlaydı._
+
+_Eger virus juqtırılǵan jaǵdayda da, keselliktiń salıstırmalı túrde jeńillew ótiwin támiyinleydi. Usılardı esapqa alsaq, vakcina alǵan adamlar da virus juqtırıwı múmkin, bul kútilmegen jaǵday emes. Parqı tek sonda, vakcina almaǵan geybir adamlarda kesellik qattı ótlesip ketip, ólim dárejesine shekem jetkeriwi múmkin bolsa, vakcina alǵan adamda bunday jaǵdaydıń itimallılıǵı birneshe ese azayadı._
+
+---
+
+> Házirgi vakcinalar jańadan payda bolıp atırǵan shtamlarǵa (máselen, Delta) qarsı gúrese ala ma yaki olar ushın qaytadan vakcina alıwǵa tuwra kele me?
+
+_Ekspertlerdiń aytıwınsha, vakcinalar jańadan payda bolıp atırǵan shtamlarǵa qarsı ele tabıslı gúrese aladı. Biraq ta, Delta shtamına qarsı effektivliligi sál azayǵanlıǵı haqqında aytılmaqta._
+
+---
+
+> Men koronavirus bolıp awırdım, maǵan vakcina shárt emes ǵoy?
+
+_Yaq, virus penen kesellengen bolsańız da, vakcina alǵanıńız maqul dep másláhát beredi ekspertler. Sebebi, kesellik dáwirinde arttırılǵan antidenesheler uzaq waqıtqa shekem xızmet etpeydi, sonlıqtan organizmniń gúressheńligin asırıw maqsetinde, biraz múddetten soń (⁓6 ay) vakcina alǵanıńız maqul degen juwmaqqa keledi taraw mamanları._
+
+---
+
+Keshirersiz, dım uzın post bolıp ketti. Lekin, bul maǵlıwmatlardıń kimgedur paydası tiyip qalar dep úmit etemen. Ilajı bolsa, vakcina alıń, bul arqalı tek ózińizdi emes, al jámiyettegilerdiń de bul pandemiyadan tez hám aman-esen shıǵıp ketiwine úles qosqan bolasız.
+
+P. S. Qızıǵıwshılar bolatuǵın bolsa, tómendegi siltemeler artında jiyi beriletuǵın sorawlarǵa juwaplar keltirilgen:
 
 - [https://meduza.io/feature/2021/07/06/nauchnyy-redaktor-meduzy-aleksandr-ershov-ochen-perezhivaet-chto-mnogie-do-sih-por-ne-vaktsinirovany](https://meduza.io/feature/2021/07/06/nauchnyy-redaktor-meduzy-aleksandr-ershov-ochen-perezhivaet-chto-mnogie-do-sih-por-ne-vaktsinirovany)
-- [https://www.tallinn.ee/Chasto-zadavaemye-voprosy-o-vaktsinatsii](https://www.tallinn.ee/Chasto-zadavaemye-voprosy-o-vaktsinatsii)
 - [https://www.health.gov.au/sites/default/files/documents/2021/06/covid-19-vaccination-covid-19-covid-19-vaccines-common-questions_17.docx](https://www.health.gov.au/sites/default/files/documents/2021/06/covid-19-vaccination-covid-19-covid-19-vaccines-common-questions_17.docx)
